// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider          = "postgresql"
  url               = env("DB_URI")
  shadowDatabaseUrl = env("SHADOW_DB_URI")
}

model User {
  password String
  email    String   @unique
  id       Int      @id @default(autoincrement())
  company  Company?
}

model Company {
  id         Int        @id @default(autoincrement())
  name       String
  region     String?
  currency   String?
  categories Category[]
  user       User       @relation(fields: [userId], references: [id])
  userId     Int        @unique
  Product    Product[]
}

model Category {
  id          Int       @id @default(autoincrement())
  description String?
  name        String
  products    Product[]
  company     Company[]
}

model Product {
  id          Int      @id @default(autoincrement())
  price       Int
  name        String
  description String
  ingredients String[]
  company     Company  @relation(fields: [companyId], references: [id])
  companyId   Int
  category    Category @relation(fields: [categoryId], references: [id])
  categoryId  Int
  menu        Menu?    @relation(fields: [menuId], references: [id])
  menuId      Int?
}

model Menu {
  id          Int       @id @default(autoincrement())
  price       Int
  name        String
  description String
  items       Product[]
  size        Size      @default(Medium)
}

enum Size {
  Big
  Medium
  Small
}
